--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@base-ui/react": "^1.0.0",
+    "@stytch/nextjs": "^21.18.0",
+    "@stytch/vanilla-js": "^5.44.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
